# health-assistant-live-avatar

./: .dockerignore  .gitignore  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
agent/: .dockerignore  pyproject.toml
agent/livekit_worker/: avatar.py  gemini_tts.py  worker.py
backend/: .dockerignore  .env.example  pyproject.toml
backend/app/: config.py  main.py  phone_utils.py
backend/app/api/: sessions.py  summaries.py  tools.py
backend/app/db/: database.py  models.py
backend/app/providers/llm/: groq_client.py
backend/app/templates/: healthcare_front_desk.yaml
docker/: .dockerignore  .env.example  compose-spec.json  compose.deploy.yml  compose.yml  livekit.yaml
docker/agent/: Dockerfile  entrypoint.sh
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile
docker/scripts/: autoheal.sh  compose.sh  deploy.sh  reset-db.sh
docs/: DEPLOY.md
frontend/: .dockerignore  bun.lockb  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/call/: page.tsx
frontend/app/conversations/: page.tsx
frontend/components/: AvatarVideo.tsx  CallRecordingPlayer.tsx  ChatInput.tsx  ToolActivityFeed.tsx
frontend/lib/: api.ts  livekitParticipants.ts  phone.ts  session.ts  transcript.ts
nginx/: README.md
nginx/scripts/: diagnose.sh  doctor.sh  enable-ssl.sh  install.sh  lib.sh  reload.sh  repair.sh  setup-firewall.sh  update-upstream.sh
nginx/sites-available/: mykare-backend  mykare-frontend  mykare-livekit
nginx/upstream/: upstream-blue.conf  upstream-green.conf
(+9 files in other folders)
