[project]
name = "health-assistant-agent"
version = "0.1.0"
description = "Health Assistant LiveKit voice agent worker"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[deepgram,groq,cartesia,bey,tavus]>=1.2.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
