[project]
name = "health-assistant-backend"
version = "0.1.0"
description = "Health Assistant FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pyyaml",
    "livekit-api",
    "httpx",
    "python-multipart",
]

[tool.uv]
package = false
